add gatling simulation